--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,20 @@
 app:
-  port: "3223"
-  baseurl: "dev.auto-mall.ro"
+  baseurl: : dev.auto-mall.ro
   db:
-    user: "dev"
-    pass: "siana1316"
-    name: "automall"
-    host: "dev.auto-mall.ro"
+   user: "dev"
+   pass: "siana1316"
+   name: "automall"
+   host: "dev.auto-mall.ro"
+service:
+  sessionstarter:
+    http:
+      port: "3223"
 smq:
   port: "3113"
   url: "dev.auto-mall.ro"
+  jobs:
+    topic:
+      name: "jobs"
+  results:
+    topic:
+      name: "results"
