--- a/compose.yaml
+++ b/compose.yaml
@@ -6,9 +6,26 @@ services:
     ports:
       - "3223:3223"
     environment:
-      - APP_PORT=3223
+      - SESSIONSTARTER_HTTP_PORT=3223
+      - APP_BASE_URL=dev.auto-mall.ro
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=
+      - APP_DB_HOST
       - SMQ_URL=dev.auto-mall.ro
-      - SMQ_PORT=3113
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME="jobs"
+  pagescraper:
+    build:
+      context: ./
+      dockerfile: cmd/pagescraper/Dockerfile
+    ports:
+      - "3993:3993"
+    environment:
+      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME="jobs"
+      - SMQ_RESULTS_TOPIC_NAME="results"
 #  sessionmanager:
 #    build:
 #      dockerfile: cmd/sessionmanager/Dockerfile
