--- a/app.yaml
+++ b/app.yaml
@@ -1,16 +1,17 @@
 app:
-  baseurl: : dev.auto-mall.ro
+  baseurl: "dev.auto-mall.ro"
   db:
-   user: "dev"
-   pass: "siana1316"
-   name: "automall"
-   host: "dev.auto-mall.ro"
+    user: "dev"
+    pass: "siana1316"
+    name: "automall"
+    host: "dev.auto-mall.ro"
 service:
   sessionstarter:
     http:
       port: "3223"
 smq:
-  port: "3113"
+  http:
+    port: "3113"
   url: "dev.auto-mall.ro"
   jobs:
     topic:
@@ -18,3 +19,6 @@ smq:
   results:
     topic:
       name: "results"
+mock:
+  http:
+    port: "4114"
