--- a/compose.yaml
+++ b/compose.yaml
@@ -52,24 +52,22 @@ services:
 #      - SMQ_HTTP_PORT=3113
 #      - SMQ_JOBS_TOPIC_NAME="jobs"
 #      - SMQ_RESULTS_TOPIC_NAME="results"
-#  resultsconsumer:
-#    build:
-#      context: ./
-#      dockerfile: cmd/resultsconsumer/Dockerfile
-#    ports:
-#      - "4224:4224"
-#    environment:
-#      - APP_BASE_URL=dev.auto-mall.ro
-#      - APP_DB_USER=dev
-#      - APP_DB_PASS=siana1316
-#      - APP_DB_NAME=automall
-#      - APP_DB_HOST=dev.auto-mall.ro
-#      - SMQ_URL=dev.auto-mall.ro
-#      - SMQ_HTTP_PORT=3113
-#      - SMQ_JOBS_TOPIC_NAME=jobs
-#      - SMQ_RESULTS_TOPIC_NAME=results
-
-
+  resultsconsumer:
+    build:
+      context: ./
+      dockerfile: cmd/resultsconsumer/Dockerfile
+    ports:
+      - "4224:4224"
+    environment:
+      - APP_BASE_URL=dev.auto-mall.ro
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=automall
+      - APP_DB_HOST=dev.auto-mall.ro
+      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME=jobs
+      - SMQ_RESULTS_TOPIC_NAME=results
 #  sessionmanager:
 #    build:
 #      dockerfile: cmd/sessionmanager/Dockerfile
