--- a/compose.yaml
+++ b/compose.yaml
@@ -13,22 +13,22 @@ services:
       - APP_DB_HOST=dev.auto-mall.ro
       - SMQ_URL=dev.auto-mall.ro
       - BACKEND_HTTP_PORT=8080
-#  sessionstarter:
-#    build:
-#      context: ./
-#      dockerfile: cmd/sessionstarter/Dockerfile
-#    ports:
-#      - "3223:3223"
-#    environment:
-#      - SESSIONSTARTER_HTTP_PORT=3223
-#      - APP_BASE_URL=dev.auto-mall.ro
-#      - APP_DB_USER=dev
-#      - APP_DB_PASS=siana1316
-#      - APP_DB_NAME=
-#      - APP_DB_HOST
-#      - SMQ_URL=dev.auto-mall.ro
-#      - SMQ_HTTP_PORT=3113
-#      - SMQ_JOBS_TOPIC_NAME="jobs"
+  sessionstarter:
+    build:
+      context: ./
+      dockerfile: cmd/sessionstarter/Dockerfile
+    ports:
+      - "3223:3223"
+    environment:
+      - SESSIONSTARTER_HTTP_PORT=3223
+      - APP_BASE_URL=dev.auto-mall.ro
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=
+      - APP_DB_HOST
+      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME="jobs"
 #  pagescraper:
 #    build:
 #      context: ./
