--- a/compose.yaml
+++ b/compose.yaml
@@ -29,17 +29,17 @@ services:
       - SMQ_URL=dev.auto-mall.ro
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME="jobs"
-#  pagescraper:
-#    build:
-#      context: ./
-#      dockerfile: cmd/pagescraper/Dockerfile
-#    ports:
-#      - "3993:3993"
-#    environment:
-#      - SMQ_URL=dev.auto-mall.ro
-#      - SMQ_HTTP_PORT=3113
-#      - SMQ_JOBS_TOPIC_NAME="jobs"
-#      - SMQ_RESULTS_TOPIC_NAME="results"
+  pagescraper:
+    build:
+      context: ./
+      dockerfile: cmd/pagescraper/Dockerfile
+    ports:
+      - "3993:3993"
+    environment:
+      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME="jobs"
+      - SMQ_RESULTS_TOPIC_NAME="results"
 #  mock:
 #    build:
 #      context: ./
