--- a/compose.yaml
+++ b/compose.yaml
@@ -24,8 +24,8 @@ services:
       - APP_BASE_URL=dev.auto-mall.ro
       - APP_DB_USER=dev
       - APP_DB_PASS=siana1316
-      - APP_DB_NAME=
-      - APP_DB_HOST
+      - APP_DB_NAME=automall
+      - APP_DB_HOST=dev.auto-mall.ro
       - SMQ_URL=dev.auto-mall.ro
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME="jobs"
