--- a/compose.yaml
+++ b/compose.yaml
@@ -36,6 +36,10 @@ services:
     ports:
       - "3993:3993"
     environment:
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=automall
+      - APP_DB_HOST=dev.auto-mall.ro
       - SMQ_URL=dev.auto-mall.ro
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME="jobs"
