--- a/compose.yaml
+++ b/compose.yaml
@@ -1,34 +1,34 @@
 services:
-  backend:
-    build:
-      context: ./
-      dockerfile: cmd/backend/Dockerfile
-    ports:
-      - "8080:8080"
-    environment:
-      - APP_BASE_URL=dev.auto-mall.ro
-      - APP_DB_USER=dev
-      - APP_DB_PASS=siana1316
-      - APP_DB_NAME=automall
-      - APP_DB_HOST=dev.auto-mall.ro
-      - SMQ_URL=dev.auto-mall.ro
-      - BACKEND_HTTP_PORT=8080
-  sessionstarter:
-    build:
-      context: ./
-      dockerfile: cmd/sessionstarter/Dockerfile
-    ports:
-      - "3223:3223"
-    environment:
-      - SESSIONSTARTER_HTTP_PORT=3223
-      - APP_BASE_URL=dev.auto-mall.ro
-      - APP_DB_USER=dev
-      - APP_DB_PASS=siana1316
-      - APP_DB_NAME=automall
-      - APP_DB_HOST=dev.auto-mall.ro
-      - SMQ_URL=dev.auto-mall.ro
-      - SMQ_HTTP_PORT=3113
-      - SMQ_JOBS_TOPIC_NAME="jobs"
+#  backend:
+#    build:
+#      context: ./
+#      dockerfile: cmd/backend/Dockerfile
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      - APP_BASE_URL=dev.auto-mall.ro
+#      - APP_DB_USER=dev
+#      - APP_DB_PASS=siana1316
+#      - APP_DB_NAME=automall
+#      - APP_DB_HOST=dev.auto-mall.ro
+#      - SMQ_URL=dev.auto-mall.ro
+#      - BACKEND_HTTP_PORT=8080
+#  sessionstarter:
+#    build:
+#      context: ./
+#      dockerfile: cmd/sessionstarter/Dockerfile
+#    ports:
+#      - "3223:3223"
+#    environment:
+#      - SESSIONSTARTER_HTTP_PORT=3223
+#      - APP_BASE_URL=dev.auto-mall.ro
+#      - APP_DB_USER=dev
+#      - APP_DB_PASS=siana1316
+#      - APP_DB_NAME=automall
+#      - APP_DB_HOST=dev.auto-mall.ro
+#      - SMQ_URL=dev.auto-mall.ro
+#      - SMQ_HTTP_PORT=3113
+#      - SMQ_JOBS_TOPIC_NAME="jobs"
   pagescraper:
     build:
       context: ./
@@ -44,37 +44,19 @@ services:
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME="jobs"
       - SMQ_RESULTS_TOPIC_NAME="results"
-#  mock:
+#  resultsconsumer:
 #    build:
 #      context: ./
-#      dockerfile: cmd/mock/Dockerfile
+#      dockerfile: cmd/resultsconsumer/Dockerfile
 #    ports:
-#      - "4114:4114"
+#      - "4224:4224"
 #    environment:
-#      - MOCK_HTTP_PORT=4114
+#      - APP_BASE_URL=dev.auto-mall.ro
+#      - APP_DB_USER=dev
+#      - APP_DB_PASS=siana1316
+#      - APP_DB_NAME=automall
+#      - APP_DB_HOST=dev.auto-mall.ro
 #      - SMQ_URL=dev.auto-mall.ro
 #      - SMQ_HTTP_PORT=3113
-#      - SMQ_JOBS_TOPIC_NAME="jobs"
-#      - SMQ_RESULTS_TOPIC_NAME="results"
-  resultsconsumer:
-    build:
-      context: ./
-      dockerfile: cmd/resultsconsumer/Dockerfile
-    ports:
-      - "4224:4224"
-    environment:
-      - APP_BASE_URL=dev.auto-mall.ro
-      - APP_DB_USER=dev
-      - APP_DB_PASS=siana1316
-      - APP_DB_NAME=automall
-      - APP_DB_HOST=dev.auto-mall.ro
-      - SMQ_URL=dev.auto-mall.ro
-      - SMQ_HTTP_PORT=3113
-      - SMQ_JOBS_TOPIC_NAME=jobs
-      - SMQ_RESULTS_TOPIC_NAME=results
-#  sessionmanager:
-#    build:
-#      dockerfile: cmd/sessionmanager/Dockerfile
-#      context: ./
-#    ports:
-#      - "3336:3336"
+#      - SMQ_JOBS_TOPIC_NAME=jobs
+#      - SMQ_RESULTS_TOPIC_NAME=results
