--- a/compose.yaml
+++ b/compose.yaml
@@ -42,8 +42,8 @@ services:
       - APP_DB_HOST=dev.auto-mall.ro
       - SMQ_URL=dev.auto-mall.ro
       - SMQ_HTTP_PORT=3113
-      - SMQ_JOBS_TOPIC_NAME="jobs"
-      - SMQ_RESULTS_TOPIC_NAME="results"
+      - SMQ_JOBS_TOPIC_NAME=jobs
+      - SMQ_RESULTS_TOPIC_NAME=results
 #  resultsconsumer:
 #    build:
 #      context: ./
