--- a/cmd/pagescraper/Dockerfile
+++ b/cmd/pagescraper/Dockerfile
@@ -22,6 +22,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o pagescraper cmd/p
 
 FROM scratch
 
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /app/pagescraper .
 
 ENTRYPOINT ["./pagescraper"]
