--- a/compose.yaml
+++ b/compose.yaml
@@ -1,34 +1,34 @@
 services:
-#  backend:
-#    build:
-#      context: ./
-#      dockerfile: cmd/backend/Dockerfile
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      - APP_BASE_URL=dev.auto-mall.ro
-#      - APP_DB_USER=dev
-#      - APP_DB_PASS=siana1316
-#      - APP_DB_NAME=automall
-#      - APP_DB_HOST=dev.auto-mall.ro
-#      - SMQ_URL=dev.auto-mall.ro
-#      - BACKEND_HTTP_PORT=8080
-#  sessionstarter:
-#    build:
-#      context: ./
-#      dockerfile: cmd/sessionstarter/Dockerfile
-#    ports:
-#      - "3223:3223"
-#    environment:
-#      - SESSIONSTARTER_HTTP_PORT=3223
-#      - APP_BASE_URL=dev.auto-mall.ro
-#      - APP_DB_USER=dev
-#      - APP_DB_PASS=siana1316
-#      - APP_DB_NAME=automall
-#      - APP_DB_HOST=dev.auto-mall.ro
-#      - SMQ_URL=dev.auto-mall.ro
-#      - SMQ_HTTP_PORT=3113
-#      - SMQ_JOBS_TOPIC_NAME="jobs"
+  backend:
+    build:
+      context: ./
+      dockerfile: cmd/backend/Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - APP_BASE_URL=dev.auto-mall.ro
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=automall
+      - APP_DB_HOST=dev.auto-mall.ro
+      - SMQ_URL=dev.auto-mall.ro
+      - BACKEND_HTTP_PORT=8080
+  sessionstarter:
+    build:
+      context: ./
+      dockerfile: cmd/sessionstarter/Dockerfile
+    ports:
+      - "3223:3223"
+    environment:
+      - SESSIONSTARTER_HTTP_PORT=3223
+      - APP_BASE_URL=dev.auto-mall.ro
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=automall
+      - APP_DB_HOST=dev.auto-mall.ro
+      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME="jobs"
   pagescraper:
     build:
       context: ./
@@ -44,19 +44,19 @@ services:
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME=jobs
       - SMQ_RESULTS_TOPIC_NAME=results
-#  resultsconsumer:
-#    build:
-#      context: ./
-#      dockerfile: cmd/resultsconsumer/Dockerfile
-#    ports:
-#      - "4224:4224"
-#    environment:
-#      - APP_BASE_URL=dev.auto-mall.ro
-#      - APP_DB_USER=dev
-#      - APP_DB_PASS=siana1316
-#      - APP_DB_NAME=automall
-#      - APP_DB_HOST=dev.auto-mall.ro
-#      - SMQ_URL=dev.auto-mall.ro
-#      - SMQ_HTTP_PORT=3113
-#      - SMQ_JOBS_TOPIC_NAME=jobs
-#      - SMQ_RESULTS_TOPIC_NAME=results
+  resultsconsumer:
+    build:
+      context: ./
+      dockerfile: cmd/resultsconsumer/Dockerfile
+    ports:
+      - "4224:4224"
+    environment:
+      - APP_BASE_URL=dev.auto-mall.ro
+      - APP_DB_USER=dev
+      - APP_DB_PASS=siana1316
+      - APP_DB_NAME=automall
+      - APP_DB_HOST=dev.auto-mall.ro
+      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_HTTP_PORT=3113
+      - SMQ_JOBS_TOPIC_NAME=jobs
+      - SMQ_RESULTS_TOPIC_NAME=results
