--- a/cmd/newversion/Dockerfile
+++ b/cmd/newversion/Dockerfile
@@ -9,7 +9,7 @@ RUN apk update \
 WORKDIR /app
 
 # Copy the source from the current directory to the Working Directory inside the container
-COPY . .
+COPY ../.. .
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
