--- a/compose.yaml
+++ b/compose.yaml
@@ -75,8 +75,9 @@ services:
       - APP_DB_USER=dev
       - APP_DB_PASS=siana1316
       - APP_DB_NAME=automall
+      - APP_DB_VEHICLES=vehicles
       - APP_DB_HOST=dev.auto-mall.ro
-      - SMQ_URL=dev.auto-mall.ro
+      - SMQ_URL=smq-smq-1
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME=jobs
       - SMQ_RESULTS_TOPIC_NAME=results
@@ -86,9 +87,11 @@ services:
     build:
       context: ./
       dockerfile: cmd/envtest/Dockerfile
-    profiles:
-        - envtest
-    environment:
-        - TEST_VAR=${TEST_VAR}
+#    profiles:
+#         ["dev", "prod"]
+#    environment:
+#        - TEST_VAR=${TEST_VAR}
+    env_file:
+      - development.env
 networks:
   localdev:
