--- a/compose.yaml
+++ b/compose.yaml
@@ -87,7 +87,7 @@ services:
       - APP_DB_VEHICLES=vehicles
       - APP_DB_LOGS=logs
       - APP_DB_HOST=dev.auto-mall.ro
-      - SMQ_URL=smq-smq-1
+      - SMQ_URL=dev.auto-mall.ro
       - SMQ_HTTP_PORT=3113
       - SMQ_JOBS_TOPIC_NAME=jobs
       - SMQ_RESULTS_TOPIC_NAME=results
