--- a/compose.yaml
+++ b/compose.yaml
@@ -42,6 +42,7 @@ services:
       - APP_DB_USER=dev
       - APP_DB_PASS=siana1316
       - APP_DB_NAME=automall
+      - APP_DB_LOGS=logs
       - APP_DB_HOST=dev.auto-mall.ro
       - SMQ_URL=dev.auto-mall.ro
       - SMQ_HTTP_PORT=3113
